--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -275,7 +275,7 @@ DecalComponent="\"Object\" "
 MaterialExpressionAppendVector="\"Object\" "
 Door_Group_SM_Door_04_low_Blueprint_C="\"Object\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
-Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
+Info=
 DirectionalLight="\"Object\" "
 Light="\"Object\" "
 DecalActor="\"Object\" "
@@ -2273,7 +2273,6 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Animation,MaterialEditorInstanceConstant.ParameterGroups.CloudColors,MaterialEditorInstanceConstant.ParameterGroups.Global,MaterialEditorInstanceConstant.ParameterGroups.Sky,MaterialEditorInstanceConstant.ParameterGroups.Sun,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
@@ -2389,7 +2388,7 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,W
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 ExponentialHeightFog=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SkyLight=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-DirectionalLight=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
+DirectionalLight=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SceneComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 CineCameraActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
@@ -2539,26 +2538,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil
-MRUItem2=/Game/Assets/Aziz/Assets/Plaque/MM_Yggdrasil
-MRUItem3=/Game/Assets/Aziz/Assets/Plaque/TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem4=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
-MRUItem5=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
-MRUItem6=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
-MRUItem7=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
-MRUItem9=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
-MRUItem10=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
-MRUItem11=/Game/attic_migration
-MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
-MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
-MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
-MRUItem17=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem18=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
-MRUItem19=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem0=/Game/Assets/Aziz/Assets/floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector_Mat
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil
+MRUItem3=/Game/Assets/Aziz/Assets/Plaque/MM_Yggdrasil
+MRUItem4=/Game/Assets/Aziz/Assets/Plaque/TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem5=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
+MRUItem6=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
+MRUItem7=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
+MRUItem8=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
+MRUItem10=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
+MRUItem11=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
+MRUItem12=/Game/attic_migration
+MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
+MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
+MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem17=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
+MRUItem18=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem19=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2678,6 +2677,7 @@ None=======
 /Game/Assets/Aziz/Assets/Plaque/TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic.TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Assets/Aziz/Assets/Plaque/MM_Yggdrasil.MM_Yggdrasil=1
 /Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil.SM_Yggdrasil=1
+/Game/Assets/Aziz/Assets/floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector_Mat.floral-seamless-pattern-flower-background-floral-seamless-texture-with-flowers-flourish-tiled-white-spring-wallpaper-vector_Mat=1
 
 [MaterialEditor]
 PrimType=1
