--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -359,12 +359,11 @@ VolumetricCloud="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Assets/Amy/Asset/jewellery_box/JB_texture.JB_texture
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -465,7 +464,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy
 ContentBrowserTab1.SelectedPaths=/Game/MSPresets/M_MS_Decal_Material_VT
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Modular/MainStructureModularAssets
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/jewellery_box
 None=======
 None=======
 None=======
@@ -1524,11 +1523,11 @@ WindowSize=X=1328.000 Y=768.000
 WindowSize=X=1327.333 Y=767.333
 WindowSize=X=1326.400 Y=766.400
 WindowSize=X=1323.200 Y=763.200
-WindowSize=X=1329.333 Y=769.333
+WindowSize=X=1331.333 Y=771.333
 StaticMesh.LevelOfDetail=True
 Door_Group_SM_Door_04_low_Blueprint_C.Networking=True
 StaticMesh.Thumbnail=True
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2590,10 +2589,10 @@ PinnedCommandList.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 None=======
@@ -2601,6 +2600,7 @@ None=======
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Animation,MaterialEditorInstanceConstant.ParameterGroups.CloudColors,MaterialEditorInstanceConstant.ParameterGroups.Global,MaterialEditorInstanceConstant.ParameterGroups.Sky,MaterialEditorInstanceConstant.ParameterGroups.Sun,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
