--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Assets/Amy/test
 LastLevel=/Game/Attic
 LastLevel=/Game/Assets/Amy/test
-LastLevel=/Game/Attic
+LastLevel=/Game/Assets/Amy/firstfloor
 None=======
 None=======
 None=======
@@ -436,7 +436,7 @@ MaterialExpressionWorldPosition="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -526,10 +526,10 @@ CameraSpeed=2
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Attic
-MRUItem1=/Game/stairwellblock3
-MRUItem2=/Game/stairwellblock2
-MRUItem3=/Game/Assets/Amy/firstfloor
+MRUItem0=/Game/Assets/Amy/firstfloor
+MRUItem1=/Game/Attic
+MRUItem2=/Game/stairwellblock3
+MRUItem3=/Game/stairwellblock2
 MRUItem4=/Game/Assets/Amy/test
 MRUItem5=/Game/Group_Assets/Amy/test
 MRUItem6=/Game/Assets/Amy/first_floor
@@ -617,7 +617,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Charlotte/Assets/Shield
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3359,26 +3359,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Tashan/Stairs/stairs
-MRUItem1=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
-MRUItem2=/Game/MSPresets/M_MS_Default_Material_VT/M_MS_Default_Material_VT
-MRUItem3=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/MI_Modular_Wooden_Ceiling_ugyqcitdw_2K
-MRUItem4=/Game/Megascans/Surfaces/Old_Wooden_Panel_tczlfasn/MI_Old_Wooden_Panel_tczlfasn_2K_Inst
-MRUItem5=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/MI_Old_Decorative_Wallpaper_uf2vbflaw_2K_Inst
-MRUItem6=/Game/Group_Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
-MRUItem7=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/T_Old_Decorative_Wallpaper_uf2vbflaw_2K_D
-MRUItem8=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/MI_Old_Decorative_Wallpaper_uf2vbflaw_2K
-MRUItem9=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_ufsnfccfw/MI_Old_Decorative_Wallpaper_ufsnfccfw_2K
-MRUItem10=/Game/Group_Assets/Charlotte/Assets/Shield/Sheild_low
-MRUItem11=/Game/Group_Assets/Charlotte/Assets/Shield/Sheild_low_lambert1_OcclusionRoughnessMetallic
-MRUItem12=/Game/Group_Assets/Charlotte/Assets/Shield/Sheild
-MRUItem13=/Game/Neglect/M3/NewMaterialFunction
-MRUItem14=/Game/Neglect/M3/AmyAssets/MAT_TRIMS
-MRUItem15=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
-MRUItem16=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst
-MRUItem17=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
-MRUItem18=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem19=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem0=/Game/Assets/Amy/firstfloor
+MRUItem1=/Game/Group_Assets/Tashan/Stairs/stairs
+MRUItem2=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
+MRUItem3=/Game/MSPresets/M_MS_Default_Material_VT/M_MS_Default_Material_VT
+MRUItem4=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/MI_Modular_Wooden_Ceiling_ugyqcitdw_2K
+MRUItem5=/Game/Megascans/Surfaces/Old_Wooden_Panel_tczlfasn/MI_Old_Wooden_Panel_tczlfasn_2K_Inst
+MRUItem6=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/MI_Old_Decorative_Wallpaper_uf2vbflaw_2K_Inst
+MRUItem7=/Game/Group_Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
+MRUItem8=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/T_Old_Decorative_Wallpaper_uf2vbflaw_2K_D
+MRUItem9=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/MI_Old_Decorative_Wallpaper_uf2vbflaw_2K
+MRUItem10=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_ufsnfccfw/MI_Old_Decorative_Wallpaper_ufsnfccfw_2K
+MRUItem11=/Game/Group_Assets/Charlotte/Assets/Shield/Sheild_low
+MRUItem12=/Game/Group_Assets/Charlotte/Assets/Shield/Sheild_low_lambert1_OcclusionRoughnessMetallic
+MRUItem13=/Game/Group_Assets/Charlotte/Assets/Shield/Sheild
+MRUItem14=/Game/Neglect/M3/NewMaterialFunction
+MRUItem15=/Game/Neglect/M3/AmyAssets/MAT_TRIMS
+MRUItem16=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1
+MRUItem17=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst
+MRUItem18=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
+MRUItem19=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
