--- a/MorriganHall/Config/DefaultEngine.ini
+++ b/MorriganHall/Config/DefaultEngine.ini
@@ -27,6 +27,7 @@ r.RayTracing=True
 r.VirtualTextures=True
 bEnableVirtualTextureOpacityMask=True
 r.AllowStaticLighting=False
+r.AllowGlobalClipPlane=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
