--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Assets/Amy/test
 LastLevel=/Game/Attic
 LastLevel=/Game/Assets/Amy/test
-LastLevel=/Game/stairwellblock3
+LastLevel=/Game/Assets/Amy/firstfloor
 None=======
 None=======
 None=======
@@ -125,7 +125,7 @@ Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.
 Object="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -151,7 +151,7 @@ PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" 
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
-MaterialInterface="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
@@ -514,7 +514,7 @@ None=======
 None=======
 CurrentPosGridSize=1
 CurrentPosGridSize=0
-CurrentPosGridSize=0
+CurrentPosGridSize=1
 GridEnabled=False
 GridEnabled=False
 GridEnabled=True
@@ -523,15 +523,14 @@ SnapScaleEnabled=False
 SnapScaleEnabled=False
 CameraSpeed=2
 CameraSpeed=2
-CurrentRotGridSize=4
-RotGridEnabled=False
+CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/stairwellblock3
-MRUItem1=/Game/abandonedroom_V2
-MRUItem2=/Game/stairwellblock2
-MRUItem3=/Game/Attic
-MRUItem4=/Game/Assets/Amy/firstfloor
+MRUItem0=/Game/Assets/Amy/firstfloor
+MRUItem1=/Game/stairwellblock3
+MRUItem2=/Game/abandonedroom_V2
+MRUItem3=/Game/stairwellblock2
+MRUItem4=/Game/Attic
 MRUItem5=/Game/Assets/Amy/test
 MRUItem6=/Game/Group_Assets/Amy/test
 MRUItem7=/Game/Assets/Amy/first_floor
@@ -620,7 +619,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3019,6 +3018,7 @@ None=======
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Animation,MaterialEditorInstanceConstant.ParameterGroups.CloudColors,MaterialEditorInstanceConstant.ParameterGroups.Global,MaterialEditorInstanceConstant.ParameterGroups.Sky,MaterialEditorInstanceConstant.ParameterGroups.Sun,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,
@@ -3141,7 +3141,7 @@ StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Le
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,VolumetricCloud.TransformCommon.Transform,
 StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
-StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens
+StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Color Grading.Color Grading,
 None=======
 None=======
 None=======
@@ -3231,26 +3231,26 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper.wallpaper;
+RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_1m.Walls_Modular_01_Wall_Smooth_1m;
+RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01.Walls_Modular_01_Wall_Door_01;
+RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Doubleside_Wall_Doublesided_1m1.Walls_Doubleside_Wall_Doublesided_1m1;
+RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Doubleside_Wall_Doublesided_2m4.Walls_Doubleside_Wall_Doublesided_2m4;
+RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/wallpapers_WP1_015.wallpapers_WP1_015;
+RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaperoinst.mat_wallpaperoinst;
+RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst.mat_wallpaper_Inst;
+RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper.mat_wallpaper;
+RecentlyPlaced=/Game/Group_Assets/Tashan/Decals/mm_decal_splash2.mm_decal_splash2;
+RecentlyPlaced=/Game/Group_Assets/Tashan/Decals/mm_decal_leak1.mm_decal_leak1;
+RecentlyPlaced=/Game/Group_Assets/Tashan/stairs_wallpaper.stairs_wallpaper;
+RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m;
 RecentlyPlaced=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst.MI_Carpet_pgwfuop0_2K_Inst;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst.mat_wallpaper_Inst;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Shield/Sheild_low.Sheild_low;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Metal_Pot_vfyqcj2ga/S_Metal_Pot_vfyqcj2ga_lod3_Var2.S_Metal_Pot_vfyqcj2ga_lod3_Var2;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Metal_Pot_vfyqcj2ga/S_Metal_Pot_vfyqcj2ga_lod3_Var1.S_Metal_Pot_vfyqcj2ga_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Modular_Stairs_And_Handrail_Kit_xccmbaudw/S_Modular_Stairs_And_Handrail_Kit_xccmbaudw_lod0_Var2.S_Modular_Stairs_And_Handrail_Kit_xccmbaudw_lod0_Var2;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wood_Boards_ricaS/S_Old_Wood_Boards_ricaS_lod3_Var4.S_Old_Wood_Boards_ricaS_lod3_Var4;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wood_Boards_ricaS/S_Old_Wood_Boards_ricaS_lod3_Var2.S_Old_Wood_Boards_ricaS_lod3_Var2;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wood_Boards_ricaS/S_Old_Wood_Boards_ricaS_lod3_Var1.S_Old_Wood_Boards_ricaS_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damaged_Book_vf1fddhiw_lod3_Var1.S_Old_Damaged_Book_vf1fddhiw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Wicker_Basket_ukqpfhsaw/S_Old_Wicker_Basket_ukqpfhsaw_lod3_Var1.S_Old_Wicker_Basket_ukqpfhsaw_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/S_Cardboard_Boxes_Pack_uewlfg2va_lod3_Var5.S_Cardboard_Boxes_Pack_uewlfg2va_lod3_Var5;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/S_Cardboard_Boxes_Pack_uewlfg2va_lod3_Var2.S_Cardboard_Boxes_Pack_uewlfg2va_lod3_Var2;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/S_Cardboard_Boxes_Pack_uewlfg2va_lod3_Var1.S_Cardboard_Boxes_Pack_uewlfg2va_lod3_Var1;
-RecentlyPlaced=/Game/Group_Assets/Amy/Asset/violincase/ukphae2aw_LOD4.ukphae2aw_LOD4;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/RockingChair/RockingChair_low.RockingChair_low;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Bookshelf/Books_low.Books_low;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Bookshelf/Bookshelf_low.Bookshelf_low;
-RecentlyPlaced=/Game/Group_Assets/Amy/Asset/sofa/old_leather_sofa.old_leather_sofa;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3368,26 +3368,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
-MRUItem1=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
-MRUItem2=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem3=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem5=/Game/Assets/Tashan/stairs/stairs
-MRUItem6=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
-MRUItem7=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem8=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
-MRUItem10=/Game/Assets/Tashan/stairs/mat_trim
-MRUItem11=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
-MRUItem12=/Game/Assets/Amy/firstfloor
-MRUItem13=/Game/Group_Assets/Tashan/Stairs/stairs
-MRUItem14=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
-MRUItem15=/Game/MSPresets/M_MS_Default_Material_VT/M_MS_Default_Material_VT
-MRUItem16=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/MI_Modular_Wooden_Ceiling_ugyqcitdw_2K
-MRUItem17=/Game/Megascans/Surfaces/Old_Wooden_Panel_tczlfasn/MI_Old_Wooden_Panel_tczlfasn_2K_Inst
-MRUItem18=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/MI_Old_Decorative_Wallpaper_uf2vbflaw_2K_Inst
-MRUItem19=/Game/Group_Assets/Charlotte/Assets/WallPaper/Wall_Paper_Char_01_Inst
+MRUItem0=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
+MRUItem1=/Game/Assets/Amy/firstfloor
+MRUItem2=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
+MRUItem3=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
+MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
+MRUItem5=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem7=/Game/Assets/Tashan/stairs/stairs
+MRUItem8=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
+MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem10=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
+MRUItem12=/Game/Assets/Tashan/stairs/mat_trim
+MRUItem13=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
+MRUItem14=/Game/Group_Assets/Tashan/Stairs/stairs
+MRUItem15=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
+MRUItem16=/Game/MSPresets/M_MS_Default_Material_VT/M_MS_Default_Material_VT
+MRUItem17=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/MI_Modular_Wooden_Ceiling_ugyqcitdw_2K
+MRUItem18=/Game/Megascans/Surfaces/Old_Wooden_Panel_tczlfasn/MI_Old_Wooden_Panel_tczlfasn_2K_Inst
+MRUItem19=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/MI_Old_Decorative_Wallpaper_uf2vbflaw_2K_Inst
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
