and i drive myself crazy

--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Assets/Amy/test
 LastLevel=/Game/Attic
 LastLevel=/Game/Assets/Amy/test
-LastLevel=/Game/Assets/Amy/firstfloor
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -436,7 +436,7 @@ MaterialExpressionWorldPosition="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -517,7 +517,7 @@ CurrentPosGridSize=0
 CurrentPosGridSize=1
 GridEnabled=False
 GridEnabled=False
-GridEnabled=True
+GridEnabled=False
 SnapScaleEnabled=False
 SnapScaleEnabled=False
 SnapScaleEnabled=False
@@ -526,16 +526,16 @@ CameraSpeed=2
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Assets/Amy/firstfloor
-MRUItem1=/Game/stairwellblock3
-MRUItem2=/Game/abandonedroom_V2
-MRUItem3=/Game/stairwellblock2
-MRUItem4=/Game/Attic
-MRUItem5=/Game/Assets/Amy/test
-MRUItem6=/Game/Group_Assets/Amy/test
-MRUItem7=/Game/Assets/Amy/first_floor
-MRUItem8=/Game/Assets/Amy/first_floor_fabrication
-MRUItem9=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Assets/Amy/firstfloor
+MRUItem2=/Game/stairwellblock3
+MRUItem3=/Game/abandonedroom_V2
+MRUItem4=/Game/stairwellblock2
+MRUItem5=/Game/Attic
+MRUItem6=/Game/Assets/Amy/test
+MRUItem7=/Game/Group_Assets/Amy/test
+MRUItem8=/Game/Assets/Amy/first_floor
+MRUItem9=/Game/Assets/Amy/first_floor_fabrication
 MRUItem10=/Game/attic_migration
 MRUItem11=/Game/abandonedroom_night
 
@@ -619,7 +619,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Charlotte/Assets/Door
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3368,26 +3368,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
-MRUItem1=/Game/Assets/Amy/firstfloor
-MRUItem2=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
-MRUItem3=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
-MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
-MRUItem5=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem7=/Game/Assets/Tashan/stairs/stairs
-MRUItem8=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
-MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem10=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
-MRUItem12=/Game/Assets/Tashan/stairs/mat_trim
-MRUItem13=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
-MRUItem14=/Game/Group_Assets/Tashan/Stairs/stairs
-MRUItem15=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
-MRUItem16=/Game/MSPresets/M_MS_Default_Material_VT/M_MS_Default_Material_VT
-MRUItem17=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/MI_Modular_Wooden_Ceiling_ugyqcitdw_2K
-MRUItem18=/Game/Megascans/Surfaces/Old_Wooden_Panel_tczlfasn/MI_Old_Wooden_Panel_tczlfasn_2K_Inst
-MRUItem19=/Game/Megascans/Surfaces/Old_Decorative_Wallpaper_uf2vbflaw/MI_Old_Decorative_Wallpaper_uf2vbflaw_2K_Inst
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
+MRUItem2=/Game/Assets/Amy/firstfloor
+MRUItem3=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
+MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
+MRUItem5=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
+MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem8=/Game/Assets/Tashan/stairs/stairs
+MRUItem9=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst
+MRUItem10=/Game/Group_Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem11=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/masks
+MRUItem13=/Game/Assets/Tashan/stairs/mat_trim
+MRUItem14=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
+MRUItem15=/Game/Group_Assets/Tashan/Stairs/stairs
+MRUItem16=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/T_Modular_Wooden_Ceiling_ugyqcitdw_2K_D
+MRUItem17=/Game/MSPresets/M_MS_Default_Material_VT/M_MS_Default_Material_VT
+MRUItem18=/Game/Megascans/3D_Assets/Modular_Wooden_Ceiling_ugyqcitdw/MI_Modular_Wooden_Ceiling_ugyqcitdw_2K
+MRUItem19=/Game/Megascans/Surfaces/Old_Wooden_Panel_tczlfasn/MI_Old_Wooden_Panel_tczlfasn_2K_Inst
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
