first_floor_wall

--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Assets/Amy/test
 LastLevel=/Game/Attic
 LastLevel=/Game/Assets/Amy/test
-LastLevel=/Game/Living_Room
+LastLevel=/Game/Assets/Amy/firstfloor
 None=======
 None=======
 None=======
@@ -514,10 +514,10 @@ None=======
 None=======
 CurrentPosGridSize=1
 CurrentPosGridSize=0
-CurrentPosGridSize=1
+CurrentPosGridSize=0
 GridEnabled=False
 GridEnabled=False
-GridEnabled=False
+GridEnabled=True
 SnapScaleEnabled=False
 SnapScaleEnabled=False
 SnapScaleEnabled=False
@@ -526,8 +526,8 @@ CameraSpeed=2
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Assets/Amy/firstfloor
+MRUItem0=/Game/Assets/Amy/firstfloor
+MRUItem1=/Game/Living_Room
 MRUItem2=/Game/stairwellblock3
 MRUItem3=/Game/abandonedroom_V2
 MRUItem4=/Game/stairwellblock2
@@ -552,7 +552,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Modular/MainStructureModular
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/jewellery_box
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Tashan/consoletable
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Charlotte/Assets
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset
 None=======
 None=======
 None=======
@@ -619,7 +619,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets
 ContentBrowserDrawer.SelectedPaths=/Game/Assets/Tashan/M4/Tashan/Assets/windows
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -3231,11 +3231,13 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper.wallpaper;
+RecentlyPlaced=/Game/Assets/Amy/Asset/_05_wall_doubleside._05_wall_doubleside;
+RecentlyPlaced=/Game/Assets/Amy/Asset/Slanted_wall_rebuild_UR.Slanted_wall_rebuild_UR;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low.G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_Frame_01_low.G_ModularAssets_Door_Window_01_SM_Door_Frame_01_low;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_02_low.G_ModularAssets_Door_Window_01_SM_Door_02_low;
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_01_low.G_ModularAssets_Door_Window_01_SM_Door_01_low;
-RecentlyPlaced=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper.wallpaper;
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_1m.Walls_Modular_01_Wall_Smooth_1m;
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01.Walls_Modular_01_Wall_Door_01;
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Doubleside_Wall_Doublesided_1m1.Walls_Doubleside_Wall_Doublesided_1m1;
@@ -3249,8 +3251,6 @@ RecentlyPlaced=/Game/Group_Assets/Tashan/Decals/mm_decal_leak1.mm_decal_leak1;
 RecentlyPlaced=/Game/Group_Assets/Tashan/stairs_wallpaper.stairs_wallpaper;
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m;
 RecentlyPlaced=/Game/Megascans/Surfaces/Carpet_pgwfuop0/MI_Carpet_pgwfuop0_2K_Inst.MI_Carpet_pgwfuop0_2K_Inst;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Shield/Sheild_low.Sheild_low;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3368,9 +3368,9 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
-MRUItem2=/Game/Assets/Amy/firstfloor
+MRUItem0=/Game/Assets/Amy/firstfloor
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
 MRUItem3=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub
 MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Inst1
 MRUItem5=/Game/Group_Assets/Tashan/M4/Tashan/Assets/Daub/mat_daub_Damaged
